[gd_scene load_steps=3 format=3 uid="uid://deck_viewer"]

[ext_resource type="Script" path="res://scripts/deck_viewer.gd" id="1_dv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.12, 0.13, 0.16, 0.98)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.32, 0.38, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="DeckViewer" type="PopupPanel"]
title = "Deck Viewer"
initial_position = 2
size = Vector2i(600, 500)
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")
script = ExtResource("1_dv")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "DECK VIEWER (0 cards)"

[node name="CloseButton" type="Button" parent="MarginContainer/VBox/Header"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Close"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="CardGrid" type="GridContainer" parent="MarginContainer/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 7

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="SellZone" type="PanelContainer" parent="MarginContainer/VBox"]
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="SellLabel" type="Label" parent="MarginContainer/VBox/SellZone"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.5, 0.5, 1)
text = "Click a card to sell it (10% of point value)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.55, 0.6, 1)
theme_override_font_sizes/font_size = 12
text = "Total deck value: 0 points"
horizontal_alignment = 1
